# crafting-interpreters-code

./: a.out  church.py  grammar_riddle  hello  stbool.py  ternary  ternary.c  visitor.hs
clox/: CMakeLists.txt  grammar  parser_walkthrough  x
clox (copy)/: common.h  meson.build
clox/src/: chunk.c  chunk.h  clox.c  common.h  compiler.c  debug.c  scanner.c  scanner.h  value.c  vm.c  vm.h
jlox/: .project  example  grammar
jlox/src/: module-info.java
jlox/src/jlox/: AstPrinter.java  Break.java  Continue.java  Environment.java  Expr.java  ExprErrType.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Return.java  RuntimeError.java  Scanner.java  Stmt.java  Token.java  TokenType.java
jlox/src/tool/: GenerateAst.java
